--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   intl: ^0.18.1
   file_picker: ^5.2.10
   firebase_storage: ^11.0.16
+  easy_search_bar: ^2.4.2
 
 dev_dependencies:
   flutter_test:
